[package]
name = "rust_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
reqwest ={ version="0.11.18", features = ["json"] }
#surf = "2.3.2"
#hyper= {version= "0.14.17",features =["client"]}
#hyper-tls = "0.5.0"