[package]
name = "rust_utils"
version = "0.1.0"
edition = "2021"
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
[dependencies]
rust-crypto = "0.2.36"
# 网络请求
reqwest ={ version= "0.12.4", features = ["json"] }
# 这个reqwest这个一定要加版本只能是0.10.0
openssl = { version = "0.10.64", features = ["vendored"] }
#surf = "2.3.2"